/*
Copyright 2024 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package sapagent.protos.guestactions;

import "google/protobuf/wrappers.proto";

message GuestAction {
  repeated Command commands = 1;
}

message Command {
  CommandType command_type = 1;
  string parameters = 2;

  enum CommandType {
    COMMAND_TYPE_UNSPECIFIED = 0;
    SHELL = 1;
    VERSION = 2;
  }
}

message Response {
  repeated CommandResult command_results = 1;
  string error_message = 2;
}

message CommandResult {
  string output = 1;
}
